# Travelothai

./: .env.test  README.md  pyproject.toml
scripts/: run-api-dev
tests/: base.py  test_hotel.py
travelothai/: main.py
travelothai/core/: config.py  deps.py  security.py
travelothai/models/: __init__.py  booking_model.py  hotel_model.py  province_model.py  ticket_model.py  user_model.py
travelothai/routers/v1/: __init__.py  authentication_router.py  booking_router.py  hotel_router.py  province_router.py  ticket_router.py  user_router.py
travelothai/schemas/: booking_schema.py  hotel_schema.py  province_schema.py  ticket_schema.py
travelothai/services/booking_services/: BookingServiceInterface.py  DBBookingService.py  MockBookingService.py
travelothai/services/hotel_services/: DBHotelService.py  HotelServiceInterface.py  MockHotelService.py
travelothai/services/province_services/: DBProvinceService.py  MockProvinceService.py  ProvinceServiceInterface.py
travelothai/services/ticket_services/: DBTicketService.py  MockTicketService.py  TicketServiceInterface.py
